Created attachment 118958 [details] Reproducer document. Tiled rendering no longer paints images in Writer. It can be also reproduced using gtktiledviewer: bin/run gtktiledviewer $PWD/instdir/program ~/test.odt It was OK at libreoffice-5-0-branch-point, bad on master, git bisect says: d96b939fbfb140d605965f379b526786e7cc613e is the first bad commit commit d96b939fbfb140d605965f379b526786e7cc613e Author: Caolán McNamara <caolanm@redhat.com> Date: Wed Sep 16 14:17:35 2015 +0100 make CalcMaskShift a verifiable operation and check it on untrusted data Change-Id: I7c97a27d70f91b9686adf9dcb8b68c5aa25c2b4c Reviewed-on: https://gerrit.libreoffice.org/18637 Tested-by: Jenkins <ci@libreoffice.org> Reviewed-by: Caolán McNamara <caolanm@redhat.com> Tested-by: Caolán McNamara <caolanm@redhat.com> :040000 040000 576bb9849cfa8683ae993604d70283af22a52d47 39fdc6c31a66aefb1584b1c0db52f6970f2e2b4e M include :040000 040000 e613abe8d0c15e15956e5179a73e824c5fd82562 c6d8cb4eb26c6cd183f46313d1e39bc59d337a11 M vcl
Created attachment 118959 [details] How it looked like (good) in 5.0.
Created attachment 118960 [details] How it looks like on master (bad).
Adding Cc: to caolanm@redhat.com; Could you possibly take a look at this one? Thanks
Caolán McNamara committed a patch related to this issue. It has been pushed to "master": http://cgit.freedesktop.org/libreoffice/core/commit/?id=c526652a2095b070c485566058b505467c38d600 Resolves: tdf#94458 wrong alpha values for 32bit dibs It will be available in 5.1.0. The patch should be included in the daily builds available at http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More information about daily builds can be found at: http://wiki.documentfoundation.org/Testing_Daily_Builds Affected users are encouraged to test the fix and report feedback.
version set from description. Best regards. JBF