Resolves: tdf#94458 wrong alpha values for 32bit dibs

Change-Id: I02a86b0cdae2433d46f6fac361efa43f45be187f